src/test/deca/syntax/parser/invalid/invalid_float_format2.deca
// Parser test, invalid float format

{
    float x = 11e+;
}